# musubi

./: .gitignore  LICENSE  README.md  README.zh-TW.md  pyproject.toml
.github/workflows/: ci.yml
assets/: demo-graph.html
examples/demo-notes/agents/: agent-memory-persistence.md  mcp-server-architecture.md  prompt-engineering-system-prompts.md  tool-calling-patterns.md
examples/demo-notes/devops/: ci-cd-github-actions-caching.md  docker-gpu-oom-debugging.md  monitoring-uptime-kuma-setup.md  postgres-vacuum-deadlock.md
examples/demo-notes/general/: debugging-methodology.md  git-worktree-parallel-branches.md  security-api-key-rotation.md
examples/demo-notes/inference/: moe-vs-dense-bandwidth.md  ollama-vs-vllm-benchmark.md  prefix-caching-explained.md  quantization-formats-explained.md  vllm-fp8-kvcache-bug.md
examples/demo-notes/webdev/: nextjs-hreflang-canonical-split.md  pagefind-static-search.md  react-server-components-gotcha.md  vercel-domain-redirect-seo.md
experiments/: heading_boost_compare.py
experiments/token-saving/: README.md  run_experiment.py  tasks-real-corpus.template.json  tasks.json
src/musubi/: __init__.py  __main__.py  builder.py  cli.py  concepts.py  config.py  graph.py  health.py  init_wizard.py  mapgen.py  mcp_server.py  search.py  staleness.py
tests/: test_confidence_staleness.py  test_map_health.py  test_search_ranking.py
