[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "musubi"
version = "0.2.0"
description = "A knowledge-graph companion for flat-file markdown note systems. Ties your notes together."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "coolthor" }]
keywords = ["knowledge-graph", "notes", "markdown", "search", "qmd", "networkx"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Indexing",
  "Topic :: Utilities",
]

dependencies = [
  "networkx>=3.0,<4",
  "numpy>=1.24,<3",
  "scikit-learn>=1.3,<2",
]

[project.optional-dependencies]
viz = ["pyvis>=0.3.2,<1"]
dev = ["pytest>=8.0,<9", "ruff>=0.6,<1"]

[project.scripts]
musubi = "musubi.cli:main"

[project.urls]
Homepage = "https://github.com/coolthor/musubi"
Issues = "https://github.com/coolthor/musubi/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/musubi"]

[tool.hatch.build.targets.wheel.force-include]
"examples/demo-notes" = "musubi/demo-notes"
"experiments/token-saving" = "musubi/benchmark"

[tool.ruff]
line-length = 100
target-version = "py311"
